--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "uuid": "^8.3.2",
-    "warp-contracts": "^1.2.17"
+    "warp-contracts": "^1.2.17",
+    "warp-contracts-plugin-deploy": "^1.0.13"
   },
   "devDependencies": {
     "eslint": "8.22.0",
